@@ -134,17 +134,19 @@
         existing-entries (if overwrite? () (seq (.getRawClasspath java-proj)))
         new-entries (remove (set existing-entries) lein-entries)
         entries (concat existing-entries new-entries)]
-    (try 
+    (try
+      (when overwrite?
+        (jdt/set-default-output-path! java-proj nil monitor))
       (.setRawClasspath 
         java-proj
         (into-array IClasspathEntry entries)
         (e/null-progress-monitor))
       (.beginTask monitor (str "Project " (-> java-proj e/project .getName) ": Updating Leiningen Dependencies") 1)
-    (cpc/update-project-dependencies java-proj)
-    (.worked monitor 1)
-    (.done monitor)
-    (catch Exception e
-      (throw (org.eclipse.core.runtime.CoreException. (ccw.CCWPlugin/createErrorStatus "Could not reset project classpath", e)))))))
+      (cpc/update-project-dependencies java-proj)
+      (.worked monitor 1)
+      (.done monitor)
+      (catch Exception e
+        (throw (org.eclipse.core.runtime.CoreException. (ccw.CCWPlugin/createErrorStatus "Could not reset project classpath", e)))))))
 
 (defn factory [_]
   (let [state (ref {:project nil :errors []})]
